--- a/index.html
+++ b/index.html
@@ -35,9 +35,9 @@
                             <li class="group">
                                 <a href="#client" class="text-base text-dark py-2 px-8 flex group-hover:text-primary">Client</a>
                             </li>
-                            <li class="group">
+                            <!-- <li class="group">
                                 <a href="#blog" class="text-base text-dark py-2 px-8 flex group-hover:text-primary">Blog</a>
-                            </li>
+                            </li> -->
                             <li class="group">
                                 <a href="#contact" class="text-base text-dark py-2 px-8 flex group-hover:text-primary">Kontak</a>
                             </li>
@@ -80,12 +80,12 @@
             <div class="flex flex-wrap">
                 <div class="w-full px-4 mb-10 lg:w-1/2 ">
                     <h4 class="font-bold uppercase text-primary text-lg mb-3">Tentang saya</h4>
-                    <h2 class="font-bold text-dark text-3xl mb-5 max-w-md lg:text-4xl">Yuk belajar web programming</h2>
-                    <p class="font-medium text-base text-secondary max-w-xl lg:text-lg">Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam sequi dolorum quasi blanditiis molestiae reiciendis.</p>
+                    <h2 class="font-bold text-dark text-3xl mb-5 max-w-md lg:text-4xl">Fokus Saya</h2>
+                    <p class="font-medium text-base text-secondary max-w-xl lg:text-lg">Saya adalah seorang pengembang web yang berfokus pada pembuatan situs web, web applications, yang responsif dan mudah digunakan. Saya terampil dalam HTML, CSS, dan JavaScript, dan selalu berusaha memperbaiki keterampilan saya dalam pengembangan web.</p>
                 </div>
                 <div class="w-full px-4 lg:w-1/2">
-                    <h3 class="font-semibold text-dark text-2xl mb-4 lg:pt-11 lg:text-4xl">Mari berteman</h3>
-                    <p class="font-medium text-base text-secondary mb-6 lg:text-lg">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, temporibus. Ipsa totam optio pariatur distinctio, non laborum aut.</p>
+                    <h3 class="font-semibold text-dark text-2xl mb-4 lg:pt-11 lg:text-4xl">Latar Belakang</h3>
+                    <p class="font-medium text-base text-secondary mb-6 lg:text-lg">Saya adalah programmer dalam bidang web dan mobile. Saya belajar ilmu komputer di SMKN 1 Kepanjen, codepolitan.com, dicoding.com. dan pernah bekerja sebagai Tutor English Learning di SEVENTEEN ENGLISH LEARNING, dan IT di KRI Al - Bashiroh, RSU WAJAK HUSADA.</p>
                     <div class="flex items-center">
                         <!-- youtube -->
                         <a href="https://www.youtube.com/@milkiainunistaufan4336" target="_blank" class="w-9 h-9 mr-3 rounded-full flex justify-center items-center border text-secondary border-slate-300 hover:border-primary hover:bg-primary hover:text-white">
@@ -112,8 +112,8 @@
             <div class="w-full px-4">
                 <div class="max-w-xl mx-auto text-center mb-16">
                     <h4 class="font-semibold text-lg text-primary mb-2">Portofolio</h4>
-                    <h2 class="font-bold text-dark text-3xl mb-4">Projek terbaru</h2>
-                    <p class="font-medium text-md text-secondary md:text-lg">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quisquam nihil excepturi iusto, eum ipsum perferendis vero eveniet distinctio magni necessitatibus.</p>
+                    <h2 class="font-bold text-dark text-3xl mb-4">Projek Saya</h2>
+                    <p class="font-medium text-md text-secondary md:text-lg">untuk project yang saya kerjakan mualai dari project saya sendiri seperti web portofolio, landing page, website blog dengan laravel, website dashboard untuk analytic data.</p>
                 </div>
             </div>
 
@@ -123,35 +123,35 @@
                         <img src="dist/image/portofolio/landing-page-website.JPG" alt="landing Page" width="w-full">
                     </div>
                     <h3 class="font-semibold text-xl text-dark mt-5 mb-3">Teko Landing Page</h3>
-                    <p class="font-medium text-base text-secondary">Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore mollitia repellat placeat?</p>
+                    <p class="font-medium text-base text-secondary">website landing page untuk memperkenalkan kedai kopi teko</p>
                 </div>
                 <div class="mb-12 p-4 md:w-1/2 lg:w-1/3">
                     <div class="rounded-md shadow-md overflow-hidden">
                         <img src="dist/image/portofolio/portofoli-website.JPG" alt="landing Page" width="w-full">
                     </div>
                     <h3 class="font-semibold text-xl text-dark mt-5 mb-3">Portofolio Website</h3>
-                    <p class="font-medium text-base text-secondary">Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore mollitia repellat placeat?</p>
+                    <p class="font-medium text-base text-secondary">Web site landing page menampilakn portofolio saya dengan design dari tailwindcss</p>
                 </div>
                 <div class="mb-12 p-4 md:w-1/2 lg:w-1/3">
                     <div class="rounded-md shadow-md overflow-hidden">
                         <img src="dist/image/portofolio/laravel-website.JPG" alt="landing Page" width="w-full">
                     </div>
                     <h3 class="font-semibold text-xl text-dark mt-5 mb-3">Laravel Website</h3>
-                    <p class="font-medium text-base text-secondary">Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore mollitia repellat placeat?</p>
+                    <p class="font-medium text-base text-secondary">Membuat web informasi dan blog dengan framework laravel</p>
                 </div>
                 <div class="mb-12 p-4 md:w-1/2 lg:w-1/3">
                     <div class="rounded-md shadow-md overflow-hidden">
                         <img src="dist/image/portofolio/grid-website.JPG" alt="landing Page" width="w-full">
                     </div>
                     <h3 class="font-semibold text-xl text-dark mt-5 mb-3">Grid Website</h3>
-                    <p class="font-medium text-base text-secondary">Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore mollitia repellat placeat?</p>
+                    <p class="font-medium text-base text-secondary">Grid website untuk menampilkan hasil jepret dari fotographer profesional</p>
                 </div>
                 <div class="mb-12 p-4 md:w-1/2 lg:w-1/3 ">
                     <div class="rounded-md  overflow-hidden">
                         <img src="dist/image/portofolio/web-aplikasi.JPG" alt="landing Page" width="w-full">
                     </div>
                     <h3 class="font-semibold text-xl text-dark mt-5 mb-3">Web Application</h3>
-                    <p class="font-medium text-base text-secondary">Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore mollitia repellat placeat?</p>
+                    <p class="font-medium text-base text-secondary">Membuat aplikasi berbasis web untuk penyimpanan data, tampilan, statistik, dan analytic data.</p>
                 </div>
             </div>
         </div>
@@ -163,9 +163,9 @@
         <div class="container">
             <div class="w-full px-4">
                 <div class="w-xl mx-auto text-center mb-16">
-                    <h4 class="font-semibold text-lg text-primary mb-2">Client</h4>
+                    <h4 class="font-semibold text-lg text-primary mb-2">berkesinambungan</h4>
                     <h2 class="font-bold text-white text-3xl mb-4 sm:text-4xl lg:text-5xl">Bekerjasama</h2>
-                    <p class="font-medium text-md text-slate-200 md:text-lg">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quisquam nihil excepturi iusto, eum ipsum perferendis vero eveniet distinctio magni necessitatibus.</p>
+                    <p class="font-medium text-md text-slate-200 md:text-lg">Bekerjasama dengan teko coffee shop, menggunakan framework laravel, tailwindcss, dan phpmyadmin sebagai database</p>
                 </div>
             </div>
             <div class="w-full px-4">
@@ -189,7 +189,7 @@
     <!-- Client Section end -->
 
     <!-- blog Section Start -->
-    <section id="blog" class="pt-36 pb-32 bg-slate-100">
+    <!-- <section id="blog" class="pt-36 pb-32 bg-slate-100">
         <div class="container">
             <div class="w-full px-4">
                 <div class="max-w-xl mx-auto text-center mb-16">
@@ -236,7 +236,7 @@
                         </div>
                     </div>
                 </div>
-                <!-- <div class="w-full px-4 lg:w-1/2 xl:w-1/3">
+                 <div class="w-full px-4 lg:w-1/2 xl:w-1/3">
                     <div class="bg-white rounded-xl shadow-lg overflow-hidden mb-10">
                         <img src="dist/image/blog/4.jpeg" alt="makan buah" class="w-full">
                         <div class="py-8 px-6">
@@ -247,10 +247,10 @@
                             <a href="#" class="font-medium text-sm text-white bg-primary py-2 px-4 rounded-lg hover:opacity-80">Baca selengkapnya</a>
                         </div>
                     </div>
-                </div> -->
+                </div>
             </div>
         </div>
-    </section>
+    </section> -->
     <!-- blog Section End -->
 
     <!-- Contact Section Start -->
@@ -260,10 +260,10 @@
                 <div class="max-w-xl mx-auto text-center mb-16">
                     <h4 class="font-semibold text-lg text-primary mb-2">Contact</h4>
                     <h2 class="font-bold text-dark text-3xl mb-4">Hubungi Kami</h2>
-                    <p class="font-medium text-md text-secondary md:text-lg">Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti cupiditate fugit esse tempore!</p>
+                    <p class="font-medium text-md text-secondary md:text-lg"></p>
                 </div>
             </div>
-            <form>
+            <form action="" method="post">
                 <div class="w-full lg:w-2/3 lg:mx-auto">
                 <div class="w-full px-4 mb-8">
                     <label for="name" class="text-base text-primary font-bold">Nama</label>
