--- a/index.html
+++ b/index.html
@@ -6,23 +6,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="dist/style.css">
     <script src="https://polyfill.io/v3/polyfill.min.js?features=default"></script>
-    <!-- <script>
-    function initMap() {
-        // The location of Uluru
-        const uluru = { lat: -8.198148, lng: 112.507982 };
-        // The map, centered at Uluru
-        const map = new google.maps.Map(document.getElementById("map"), {
-          zoom: 4,
-          center: uluru,
-        });
-        // The marker, positioned at Uluru
-        const marker = new google.maps.Marker({
-          position: uluru,
-          map: map,
-        });
-      }
-      window.initMap = initMap;
-    </script> -->
     <title>Milki</title>
 </head>
 <body>
@@ -305,7 +288,7 @@
     <!-- Contact Section End -->
 
     <!-- maps -->
-    <div id="map"></div>
+    <div id="map"><iframe src="https://www.google.com/maps/embed?pb=!1m17!1m12!1m3!1d987.2614360903492!2d112.50743482913963!3d-8.198146672231143!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m2!1m1!2zOMKwMTEnNTMuMyJTIDExMsKwMzAnMjguNyJF!5e0!3m2!1sen!2sid!4v1680504024207!5m2!1sen!2sid" width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe></div>
     <!-- maps end -->
 
     <!-- footer start -->
@@ -390,12 +373,5 @@
 
 
     <script src="dist/js/script.js"></script>
-    <script
-      src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA3NDQL7pyXH7bPRDB469eP_qCqYPRYiSI&callback=initMap&v=weekly"
-      defer
-    ></script>
-    <script async
-        src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA3NDQL7pyXH7bPRDB469eP_qCqYPRYiSI&callback=initMap">
-    </script>
 </body>
 </html>
