--- a/index.html
+++ b/index.html
@@ -33,9 +33,9 @@
                             <li class="group">
                                 <a href="#portofolio" class="text-base text-dark py-2 px-8 flex group-hover:text-primary">Portofolio</a>
                             </li>
-                            <li class="group">
+                            <!-- <li class="group">
                                 <a href="#client" class="text-base text-dark py-2 px-8 flex group-hover:text-primary">Client</a>
-                            </li>
+                            </li> -->
                             <!-- <li class="group">
                                 <a href="#blog" class="text-base text-dark py-2 px-8 flex group-hover:text-primary">Blog</a>
                             </li> -->
@@ -56,7 +56,7 @@
             <div class="flex flex-wrap">
                 <div class="w-full self-center px-4 lg:w-1/2">
                     <h1 class="text-base font-semibold text-primary md:text-xl">Hallo Semua 👋, Saya <span class="block font-bold text-dark text-4xl mt-1 lg:text-5xl">Milki Ainun Istaufan</span></h1>
-                    <h2 class="font-medium text-secondary text-lg mb-5 lg:text-2xl">Designer & <span class="text-dark">freelancer</span></h2>
+                    <h2 class="font-medium text-secondary text-lg mb-5 lg:text-2xl">Designer & <span class="text-dark">freelancer Web Applications</span></h2>
                     <p class="font-medium text-secondary mb-10 leading-relaxed">Belajar web programing itu mudan dan menyenangkan bukan. <span class="text-dark font-bold">bukan!</span></p>
 
                     <a href="#" class="text-base font-semibold text-white bg-primary py-3 px-8 rounded-full hover:shadow-lg hover:opacity-80 transition duration-300 ease-in-out"> Hubungi saya</a>
@@ -82,11 +82,11 @@
                 <div class="w-full px-4 mb-10 lg:w-1/2 ">
                     <h4 class="font-bold uppercase text-primary text-lg mb-3">Tentang saya</h4>
                     <h2 class="font-bold text-dark text-3xl mb-5 max-w-md lg:text-4xl">Fokus Saya</h2>
-                    <p class="font-medium text-base text-secondary max-w-xl lg:text-lg">Saya adalah seorang pengembang web yang berfokus pada pembuatan situs web, web applications, yang responsif dan mudah digunakan. Saya terampil dalam HTML, CSS, dan JavaScript, dan selalu berusaha memperbaiki keterampilan saya dalam pengembangan web.</p>
+                    <p class="font-medium text-base text-secondary max-w-xl lg:text-lg">Saya adalah seorang pengembang web yang berfokus pada pembuatan situs web, web applications, yang responsif dan mudah digunakan. Saya terampil dalam HTML, CSS, dan JavaScript, php dengan framework laravel dan selalu berusaha memperbaiki keterampilan saya dalam pengembangan web.</p>
                 </div>
                 <div class="w-full px-4 lg:w-1/2">
                     <h3 class="font-semibold text-dark text-2xl mb-4 lg:pt-11 lg:text-4xl">Latar Belakang</h3>
-                    <p class="font-medium text-base text-secondary mb-6 lg:text-lg">Saya adalah programmer dalam bidang web dan mobile. Saya belajar ilmu komputer di SMKN 1 Kepanjen, codepolitan.com, dicoding.com. dan pernah bekerja sebagai Tutor English Learning di SEVENTEEN ENGLISH LEARNING, dan IT di KRI Al - Bashiroh, RSU WAJAK HUSADA.</p>
+                    <p class="font-medium text-base text-secondary mb-6 lg:text-lg">Saya adalah programmer dalam bidang web application. Saya belajar ilmu komputer di SMKN 1 Kepanjen, codepolitan.com, dicoding.com, santrikoding.com dan pernah bekerja sebagai Tutor di sebuah english course di Kampung Inggris Pare Kediri, dan IT di instansi kesehatan berlevel klinik, dan Rumah Sakit.</p>
                     <div class="flex items-center">
                         <!-- youtube -->
                         <a href="https://www.youtube.com/@milkiainunistaufan4336" target="_blank" class="w-9 h-9 mr-3 rounded-full flex justify-center items-center border text-secondary border-slate-300 hover:border-primary hover:bg-primary hover:text-white">
@@ -128,9 +128,15 @@
                 </div>
                 <div class="mb-12 p-4 md:w-1/2 lg:w-1/3">
                     <div class="rounded-md shadow-md overflow-hidden">
-                        <img src="dist/image/portofolio/portofoli-website.JPG" alt="landing Page" width="w-full">
+                        <a href="https://milki.chickencode.org/" target="_blank">
+                            <img src="dist/image/portofolio/portofoli-website.JPG" alt="landing Page" width="w-full">
+                        </a>
                     </div>
-                    <h3 class="font-semibold text-xl text-dark mt-5 mb-3">Portofolio Website</h3>
+                    <h3 class="font-semibold text-xl text-dark mt-5 mb-3">
+                        <a href="https://milki.chickencode.org/" target="_blank">
+                            Portofolio Website
+                        </a>
+                    </h3>
                     <p class="font-medium text-base text-secondary">Web site landing page menampilakn portofolio saya dengan design dari tailwindcss</p>
                 </div>
                 <div class="mb-12 p-4 md:w-1/2 lg:w-1/3">
@@ -149,9 +155,11 @@
                 </div>
                 <div class="mb-12 p-4 md:w-1/2 lg:w-1/3 ">
                     <div class="rounded-md  overflow-hidden">
-                        <img src="dist/image/portofolio/web-aplikasi.JPG" alt="landing Page" width="w-full">
+                        <a href="https://chickencode.org/" target="_blank">
+                            <img src="dist/image/portofolio/web-aplikasi.JPG" alt="landing Page" width="w-full">
+                        </a>
                     </div>
-                    <h3 class="font-semibold text-xl text-dark mt-5 mb-3">Web Application</h3>
+                    <h3 class="font-semibold text-xl text-dark mt-5 mb-3"><a href="https://chickencode.org/" target="_blank">Web Application</a></h3>
                     <p class="font-medium text-base text-secondary">Membuat aplikasi berbasis web untuk penyimpanan data, tampilan, statistik, dan analytic data.</p>
                 </div>
             </div>
@@ -160,7 +168,7 @@
     <!-- Portofolio Section end -->
 
     <!-- Client Section Start -->
-    <section id="client" class="pt-36 pb-32 bg-slate-600">
+    <!-- <section id="client" class="pt-36 pb-32 bg-slate-600">
         <div class="container">
             <div class="w-full px-4">
                 <div class="w-xl mx-auto text-center mb-16">
@@ -186,7 +194,7 @@
                 </div>
             </div>
         </div>
-    </section>
+    </section> -->
     <!-- Client Section end -->
 
     <!-- blog Section Start -->
@@ -302,7 +310,7 @@
                     <p>Jl. Puring RT.28 RW.07</p>
                     <p>Malang</p>
                 </div>
-                <div class="w-full px-4 mb-12 md:w-1/3">
+                <!-- <div class="w-full px-4 mb-12 md:w-1/3">
                     <h3 class="font-semibold text-xl text-white mb-5 ">Kategori Tulisan</h3>
                     <ul class="text-slate-300">
                         <li>
@@ -324,7 +332,7 @@
                             <a href="#" class="inline-block text-base hover:text-primary mb-3">Perikanan</a>
                         </li>
                     </ul>
-                </div>
+                </div> -->
                 <div class="w-full px-4 mb-12 md:w-1/3">
                     <h3 class="font-semibold text-xl text-white mb-5 ">Tautan</h3>
                     <ul class="text-slate-300">
@@ -337,12 +345,12 @@
                         <li>
                             <a href="#portofolio" class="inline-block text-base hover:text-primary mb-3">Portofolio</a>
                         </li>
-                        <li>
+                        <!-- <li>
                             <a href="#client" class="inline-block text-base hover:text-primary mb-3">Client</a>
                         </li>
                         <li>
                             <a href="#blog" class="inline-block text-base hover:text-primary mb-3">Blog</a>
-                        </li>
+                        </li> -->
                         <li>
                             <a href="#contact" class="inline-block text-base hover:text-primary mb-3">Contact</a>
                         </li>
