--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                 <div class="w-full self-center px-4 lg:w-1/2">
                     <h1 class="text-base font-semibold text-primary md:text-xl">Hallo Semua 👋, Saya <span class="block font-bold text-dark text-4xl mt-1 lg:text-5xl">Milki Ainun Istaufan</span></h1>
                     <h2 class="font-medium text-secondary text-lg mb-5 lg:text-2xl">Designer & <span class="text-dark">freelancer Web Applications</span></h2>
-                    <p class="font-medium text-secondary mb-10 leading-relaxed">Belajar web programing itu mudan dan menyenangkan bukan. <span class="text-dark font-bold">bukan!</span></p>
+                    <p class="font-medium text-secondary mb-10 leading-relaxed">Let me be a programmer <span class="text-dark font-bold">please!</span></p>
 
                     <a href="#" class="text-base font-semibold text-white bg-primary py-3 px-8 rounded-full hover:shadow-lg hover:opacity-80 transition duration-300 ease-in-out"> Hubungi saya</a>
                 </div>
@@ -307,7 +307,7 @@
                     <h2 class="font-bold text-4xl text-white mb-5">Teko</h2>
                     <h3 class="font-bold text-2xl mb-2">Hubungi Kami</h3>
                     <p>milkiainun@gmail.com</p>
-                    <p>Jl. Puring RT.28 RW.07</p>
+                    <p>Druju Kulon RT.28 RW.07 Tlogorejo Pagak</p>
                     <p>Malang</p>
                 </div>
                 <!-- <div class="w-full px-4 mb-12 md:w-1/3">
